new file:   figures/figure_02_biomass_40m_104m.png 	modified:   writings/bc_writing/bs_manuscript.tex

--- a/writings/bc_writing/bs_manuscript.tex
+++ b/writings/bc_writing/bs_manuscript.tex
@@ -105,22 +105,27 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	\subsection{Southern EAS}
 	At Kanyakumari, with the advent of summer monsoon, the depth of 23 $^o$ C isotherm (henceforth D23) shallows along-with oxycline (marked by 2.1 $ml \ L^{-1}$) and a rise in biomass is observed (\cref{fig:fig4} g1). The z175 is shallower during June to September and the zooplankton biomass is comparatively higher than rest of the year. The D175 deepens starting from October and the relatively high biomass in water column is maintained till late December. However, this increase in D175 isn't reflected as an increase in ZSS because of low biomass in the entire water column. A gradual increase is seen in the chlorophyll biomass starting from April and the peak is attained in June (\cref{fig:fig4} g2). The ZSS is increased in June, however the growth is minimal. There is almost no seasonal variation in ZSS off Kanyakumari (seasonal ZSS range, 1.56 $gm\ m^{-2}$) as compared to the ZSS variation at the nearest northern mooring site off Kollam (seasonal ZSS range, 4.09 $gm\ m^{-2}$), where a strong seasonal cycle is observed and the D215 is deeper for any given month.
 	
-	Off Kollam, a higher biomass is present in the larger portion of water column and the D215 is at $\sim$ 110 m during Mar-May (\cref{fig:fig4} f1). Similar to z175 off Kanyakumari, the decrease in biomass with depth is subtle below z215. The D215 begins to shallow with progressing summer monsoon. During this period, a sharp decrease is seen in the D23 ($\sim$ 60 m in June to September) while the oxycline (1.7 $ml \ L^{-1}$) overshoots the thermocline (Fig. 4. f1). A steep rise in chlorophyll biomass is seen off Kollam and its peak is attained in August (\cref{fig:fig4} f2). The ZSS declines in the same period and reaches a minimum when the chlorophyll biomass is at its peak. The chlorophyll biomass decreases rapidly in the following months, while the ZSS increases and a maximum is seen during October. This feature was earlier reported by \citep{aparna2022seasonal} showing disproportionate interaction between zooplankton and phytoplankton. This begs the question of existing understanding of predator - prey relationship in a local-scale ecological system. A similar feature is seen further north mooring site albeit with a relatively weaker zooplankton biomass, off Udupi which sits at the transition zone of SEAS \& CEAS. The peak of chlorophyll and minimum of ZSS occurs in September (\cref{fig:fig4} e2) which is one month later than off Kollam. The 2.1 $ml \ L^{-1}$  Oxygen contour overshoots thermocline, however it reaches to a much shallow depth of $\sim$ 20 m during July to October. The D200 closely follows D23; with the gradual shallowing from March onward reaching $\sim$ 60 m in September and a steep decline afterwards till November. Decrease in biomass with depth is moderate in comparison to Kollam.
-	
+	Off Kollam, a higher biomass is present in the larger portion of water column and the D215 is at $\sim$ 110 m during Mar-May (\cref{fig:fig4} f1). Similar to z175 off Kanyakumari, the decrease in biomass with depth is subtle below z215. The D215 begins to shallow with progressing summer monsoon. During this period, a sharp decrease is seen in the D23 ($\sim$ 60 m in June to September) while the oxycline (1.7 $ml \ L^{-1}$) overshoots the thermocline (Fig. 4. f1). A steep rise in chlorophyll biomass is seen off Kollam and its peak is attained in August (\cref{fig:fig4} f2). The ZSS declines in the same period and reaches a minimum when the chlorophyll biomass is at its peak. The chlorophyll biomass decreases rapidly in the following months, while the ZSS increases and a maximum is seen during October. This feature was earlier reported by \citep{aparna2022seasonal} showing disproportionate interaction between zooplankton and phytoplankton. It begs the question of existing understanding of predator - prey relationship in a local-scale ecological system. A similar feature is seen further north, off Udupi which sits at the transition zone of SEAS \& CEAS, albeit with a relatively weaker zooplankton biomass. The peak of chlorophyll and minimum of ZSS occurs in September (\cref{fig:fig4} e2) which is one month later than off Kollam. The 2.1 $ml \ L^{-1}$  oxygen contour overshoots thermocline, however it reaches to a much shallow depth of $\sim$ 20 m during July to October. The D200 closely follows D23; with the gradual shallowing from March onward reaching $\sim$ 60 m in September and a steep decline afterwards till November (\cref{fig:fig4} e1). Decrease in biomass with depth is moderate in comparison to Kollam.
 	
 
 	\subsection{Central EAS}
-	Off Goa, the D215 seasonal trend is similar to Udupi but it is entirely restricted by D23 \& oxycline that closely follows it. During March-May, the D215 is at $\sim$ 100 m which shallows with onset of summer monsoon; the chlorophyll biomass increases during this period and the maximum occurs in August after which the chlorophyll biomass and ZSS both decrease in September. Although we witness an increase in chlorophyll biomass in October, the D215 is restricted to the $\sim$ 50 m in this period (fig. 4d1) and the ZSS is at it minimum (fig. 4d2) similar to what is observed off Udupi and Kollam. The ZSS rapidly increases and reaches its maximum in January, sustained till March and then gradually declines. Unlike the previous locations, the biomass off Goa decreases rapidly below the z215 as reported earlier \citep{aparna2022seasonal}, reaching as low as 60 $mg \ m^{-3}$ during June to September at 130 m.
+	Off Goa, the D215 seasonal trend is similar to Udupi and is entirely restricted by D23 \& oxycline that closely follows it. During March-May, the D215 is at $\sim$ 100 m which shallows with onset of summer monsoon; the chlorophyll biomass increases during this period and the maximum occurs in August after which the chlorophyll biomass and ZSS both decrease in September. Although we witness an increase in chlorophyll biomass in October, the D215 is restricted to the $\sim$ 50 m in this period (fig. 4d1) and the ZSS is at it minimum (\cref{fig:fig4} d2) similar to what is observed off Udupi and Kollam. The ZSS rapidly increases and reaches its maximum in January, sustained till March and then gradually declines. Unlike the previous locations, the biomass off Goa decreases rapidly below the z215 as reported earlier \citep{aparna2022seasonal}, reaching as low as 60 $mg \ m^{-3}$ during June to September at 130 m (\cref{fig:fig4} d1).
 	 
-	The ZSS off Jaigarh is identical but stronger to that of off Goa, owing to an higher biomass above z215 and the comparatively deeper D215. The D215 is restricted by D23 \& oxycline for most of the year and it only exceeds during October-December(Fig. 4c1). From the ZSS maximum in February, it steadily decreases and attains a minimum in September (coincides with lower D215), a rapid rise is seen in the following months. What's intriguing is a presence of strong seasonal cycle in ZSS off Jaigarh (7.52 $gm\ m^{-2}$, highest among all locations) although the seasonal variation in Chlorophyll biomass (Fig. 4c2) is visibly non-existent (0.55 $mg\ m^{-3}$, lowest among all locations). This is an exact opposite scenario of Kanyakumari mooring site, where an insignificant seasonal variation in ZSS (1.56 $gm\ m^{-2}$) is seen even though the chlorophyll biomass varies strongly (1.61 $mg\ m^{-3}$). 
+%The ZSS off Jaigarh is identical but stronger to that of off Goa, owing to an higher biomass above z200 and the comparatively deeper D200. The D200 is restricted by D23 \& oxycline for most of the year and it only exceeds during October-December(Fig. 4c1). From the ZSS maximum in February, it steadily decreases and attains a minimum in September (coincides with lower D215), a rapid rise is seen in the following months. What's intriguing is a presence of strong seasonal cycle in ZSS off Jaigarh (7.52 $gm\ m^{-2}$, highest among all locations) although the seasonal variation in Chlorophyll biomass (Fig. 4c2) is visibly non-existent (0.55 $mg\ m^{-3}$, lowest among all locations). This is an exact opposite scenario of Kanyakumari mooring site, where an insignificant seasonal variation in ZSS (1.56 $gm\ m^{-2}$) is seen even though the chlorophyll biomass varies strongly (1.61 $mg\ m^{-3}$). 
+
+	
+	The ZSS off Jaigarh is identical but stronger to that of off Goa, owing to an higher biomass above z200 and the comparatively deeper D200 (\cref{fig:fig4} c2). The D200 follows D23 \& oxycline for most of the year and it only exceeds during October-December (\cref{fig:fig4} c1).  From the ZSS maximum in February, it steadily decreases and attains a minimum in September (coincides with lower D200), a rapid rise is seen in the following months. What's intriguing is a presence of strong seasonal cycle in ZSS off Jaigarh (7.52 $gm\ m^{-2}$, highest among all locations) although the seasonal variation in chlorophyll biomass (\cref{fig:fig4} c2) is visibly non-existent (0.55 $mg\ m^{-3}$, lowest among all locations). This is an exact opposite scenario of Kanyakumari site, where an insignificant seasonal variation in ZSS (1.56 $gm\ m^{-2}$) is seen even though the chlorophyll biomass varies strongly (1.61 $mg\ m^{-3}$). 
 	%The reason for the higher ZSS is looked upon in later section.
-	Starting from Kollam (Fig. 4f1) and moving northward to Jaigarh (Fig. 4c1), we see that the core of high zooplankton biomass gradually shifts from summer monsoon (off Kollam) to winter monsoon (off Jaigarh), with the transition of upper ocean zooplankton biomass happening along Udupi and Goa. 
+		
+	Starting from Kollam (\cref{fig:fig4} f1) and moving northward to Jaigarh (\cref{fig:fig4} c1), we see that the core of high zooplankton biomass gradually shifts from summer monsoon (off Kollam) to winter monsoon (off Jaigarh), with the transition of upper ocean zooplankton biomass happening along Udupi and Goa. 
 	 
 	\subsection{Northern EAS}
 	Further north of Jaigarh, off Mumbai the D215 follows a similar pattern i.e, a deeper D215 in December to early April, resulting in a higher ZSS in the same period (Fig. 4b2). 	 The D23 off Mumbai follows D215 and the oxycline follows an erratic pattern, reaching depths $>$ 140 during January to March (Fig. 4b1); when a higher biomass is observed above z215. The chlorophyll biomass shows seasonal variation albeit lower than the SEAS counterpart. Its peak occurs in August, then decreases rapidly and increases from October onward maintaining the biomass at 0.5 $mg\ m^{-3}$ till March. In zooplankton biomass climatology, during September-October a thin layer of low biomass regime is see at depths $\sim$30 - 40 m, combined with shallow D215 leading to the ZSS minimum. The ZSS increases rapidly from its minima in October in the following month as the D215 deepens and the maximum occurs in February. The chlorophyll biomass decreases from March and a gradual decrease in ZSS is seen till July, after which the ZSS basically flattens even though the chlorophyll increases. 
 	
-	At the northernmost site of EAS i.e, off Okha, a noticeable feature is deeper oxycline, exceeding $>$ 140m from February to late May while the D215 is at a shallow depth of 80m for the same period, while D23 lies in between at $\sim$ 100m. The biomass above z215 is much weaker compared to Mumbai as seen in the zooplankton biomass climatology owing to a shallower D215 which leads to a lower ZSS. From April onward a low biomass layer is seen at the upper ocean $\sim$20-40 m which extends till Late November. For this period, a high zooplankton biomass layer is sandwiched between two low biomass layer, similar to Mumbai zooplankton biomass in September-October.  There's two chlorophyll biomass maxima off Okha; one in February \citep{keerthi2017physical} and the other during August in summer monsoon \citep{levy2007basin}. The ZSS remains flat in June to September although the chlorophyll biomass increases period. Afterwards, ZSS gradually increases and attains its maximum in February same as the chlorophyll biomass. The ZSS sustains this maximum till March, declines rapidly in April and then gradually till July.  
-	  
+%	At the northernmost site of EAS i.e, off Okha, a noticeable feature is deeper oxycline, exceeding $>$ 140m from February to late May while the D215 is at a shallow depth of 80m for the same period, while D23 lies in between at $\sim$ 100m. The biomass above z215 is much weaker compared to Mumbai as seen in the zooplankton biomass climatology owing to a shallower D215 which leads to a lower ZSS. From April onward a low biomass layer is seen at the upper ocean $\sim$20-40 m which extends till Late November. For this period, a high zooplankton biomass layer is sandwiched between two low biomass layer, similar to Mumbai zooplankton biomass in September-October.  There's two chlorophyll biomass maxima off Okha; one in February \citep{keerthi2017physical} and the other during August in summer monsoon \citep{levy2007basin}. The ZSS remains flat in June to September although the chlorophyll biomass increases period. Afterwards, ZSS gradually increases and attains its maximum in February same as the chlorophyll biomass. The ZSS sustains this maximum till March, declines rapidly in April and then gradually till July.  
+	 
+	 At the northernmost site of EAS i.e, off Okha, a noticeable feature is a much higher oxygen in upper ocean. The biomass above z200 is much weaker (\cref{fig:fig4} a1) compared to Mumbai as seen in the zooplankton biomass climatology which leads to a relatively lower ZSS (\cref{fig:fig4} a2). The D200 shallows from February (coinciding with ZSS maximum) to it's minimum in August,  remains visibly flat till September and then increases steadily till December and rapidly afterwards. There's two chlorophyll peak off Okha; one in February \citep{keerthi2017physical} and the other during August in summer monsoon \citep{levy2007basin}. The ZSS remains flat in summer monsoon period i.e, June to September, although the chlorophyll biomass increases in this time. Afterwards, ZSS gradually increases and attains its maximum in February same as the chlorophyll biomass. The ZSS sustains this maximum till March, declines rapidly in April and then gradually till July.
+	 
 	\subsection{Comparison to previous result}	 
 	A comparison with the zooplankton biomass and standing stock climatology of previous work \citep{aparna2022seasonal} is made in this section for the locations of Mumbai, Goa and Kollam. In the previous study data from 2012 to 2020 is used, while the present study includes data 2017 to 2023.
 	 
