modified:   figures/aparna_ranjan_climatology_comparison.png 	modified:   figures/biomass_daily_monthly.png 	modified:   figures/biomass_monthly.png 	modified:   figures/climatology_biomass_ss_chl.png 	new file:   figures/old/aparna_ranjan_climatology_comparison.png 	new file:   figures/old/climatology_biomass_ss_chl.png 	modified:   writings/bc_writing/bs_citations.bib 	modified:   writings/bc_writing/bs_manuscript.tex

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -152,6 +152,22 @@
 	year={1998},
 	publisher={John Wiley and Sons, New York, USA}
 }
+@article{shetye1990hydrography,
+	title={Hydrography and circulation off the west coast of India during the southwest monsoon 1987},
+	author={Shetye, SR and Gouveia, AD and Shenoi, SSC and Sundar, D and Michael, GS and Almeida, AM and Santanam, K},
+	year={1990}
+}
+@article{sreenivas2008monthly,
+	title={Monthly variability of mixed layer over Arabian Sea using ARGO data},
+	author={Sreenivas, Patnaik and Patnaik, KVKRK and Prasad, KVSR},
+	journal={Marine Geodesy},
+	volume={31},
+	number={1},
+	pages={17--38},
+	year={2008},
+	publisher={Taylor \& Francis}
+}
+
 @article{chaudhuri2021observed,
 	title={Observed variability of the West India Coastal Current on the continental shelf from 2010--2017},
 	author={Chaudhuri, Anya and Amol, P and Shankar, D and Mukhopadhyay, S and Aparna, SG and Fernando, V and Kankonkar, A},
@@ -819,13 +835,18 @@
 	year={2002},
 	publisher={Elsevier}
 }
-@journal-article{Friedland.2012,
-	author = "Friedland, Kevin D. and Stock, Charles A. and Drinkwater, Kenneth F. and Link, Jason S. and Leaf, Robert T. and Shank, Burton and Rose, Julie M. and Pilskaln, Cynthia H. and Fogarty, Michael J.",
-	doi = "10.1371/journal.pone.0028945",
-	title = "Pathways Between Primary Production and Fisheries Yields of Large Marine Ecosystems",
-	journal = "Plos One",
-	year = "2012"
+
+@article{friedland2012pathways,
+	title={Pathways between primary production and fisheries yields of large marine ecosystems},
+	author={Friedland, Kevin D and Stock, Charles and Drinkwater, Kenneth F and Link, Jason S and Leaf, Robert T and Shank, Burton V and Rose, Julie M and Pilskaln, Cynthia H and Fogarty, Michael J},
+	journal={PloS one},
+	volume={7},
+	number={1},
+	pages={e28945},
+	year={2012},
+	publisher={Public Library of Science San Francisco, USA}
 }
+
 @article{silsbe2016cafe,
 	title={The CAFE model: A net production model for global ocean phytoplankton},
 	author={Silsbe, Greg M and Behrenfeld, Michael J and Halsey, Kimberly H and Milligan, Allen J and Westberry, Toby K},
@@ -862,4 +883,12 @@
 	pages={2405--2432},
 	year={1998},
 	publisher={Elsevier}
+}
+@article{garcia2013oxygen,
+	title={Dissolved Oxygen, Apparent Oxygen Utilization, and Oxygen Saturation},
+	author={García, H. E. and R. A. Locarnini and T. P. Boyer and J. I. Antonov and A. V. Mishonov and O. K. Baranova and M. M. Zweng and J. R. Reagan and D. R. Johnson},
+	journal={NOAA Atlas NESDIS 75},
+	volume={3},
+	year={2014}
+	publisher={NOAA, Washington DC, USA,A. Mishonov, Technical Ed}
 }
