modified:   figures/west_coast_wavelet_40m_scale.png 	modified:   scripts/daily_and_monthly.ipynb 	new file:   scripts/wavelet_plot.ipynb 	new file:   scripts/wavelet_westcoast_104m.ipynb 	new file:   scripts/wavelet_westcoast_40m.ipynb 	modified:   writings/bc_writing/bs_manuscript.tex

--- a/writings/bc_writing/bs_manuscript.tex
+++ b/writings/bc_writing/bs_manuscript.tex
@@ -78,7 +78,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	
 	The zooplankton biomass time series (\cref{fig:fig3}) is created from the above derived linear relationship: log$_{10}$(biomass) = $m$ * Backscatter + $k$, where $m$ is slope and $k$ is intercept. The time series shows the pattern of diel vertical migration (DVM) at all the mooring sites during dawn ($\sim$0600-0700 hours) and dusk ($\sim$1800-1900 hours). It is evident in earlier studies using backscatter \citep{ashjian2002distribution, smith2005mesozooplankton, inoue2016diel,ursella2018evidence} and in situ zooplankton data \citep{padmavati1998vertical}. The implication of DVM is a higher biomass at surface during the night as zooplankton feeds and a lower biomass at daytime as they descend to subsurface depths. The overall biomass over the time period of a day may vary but the DVM doesn't affect the seasonal variation as shown by (\citep{jiang2007temporal,aparna2022seasonal}). Since our goal is to study the seasonal variation, delineating the daily biomass is sufficient. The biomass time series and seasonal cycle is discussed in \autoref{sec:seasonalcycle}.
 	
-	The standing stock is determined by taking the depth integral of biomass over the water column. To maintain the consistency of standing stock estimation, only those deployments that doesn't lack data at any depth in the entire range of 24 - 120 m are considered for analysis. The lack of data in the above mentioned depth range is due to deviation in positioning of ADCP sensor in the water column. A swift alteration in bathymetry along the continental slope implies that the mooring might anchor at a different depth than planned, hence a change in the predicted position of ADCP. This leads to gap in data at few mooring sites for some year. For example, for the northern-most mooring at Okha, data is not available for the entire upper 120 m depth for the second deployment. Also at Jaigarh, where the surface to $\sim$60m data (in 3rd deployment) and Kollam, where 80 m and below (in 4th deployment) is unavailable and hence discarded from standing stock estimation. There are few deployments where no data or bad data was recorded e.g, at Udupi (4th deployment) and Kanyakumari (6th deployment). The seasonal cycle of standing stock for 24 - 120 m available data is explored in \autoref{sec:seasonalcycle}.
+	The standing stock is determined by taking the depth integral of biomass over the water column. To maintain the consistency of standing stock estimation, only those deployments that doesn't lack data at any depth in the entire range of 24 - 120 m are considered for analysis. The lack of data in the above mentioned depth range is due to deviation in positioning of ADCP sensor in the water column. A swift alteration in bathymetry along the continental slope implies that the mooring might anchor at a different depth than planned, hence a change in the predicted position of ADCP. This leads to gap in data at few mooring sites for some year. For example, for the northern-most mooring at Okha, data is not available for the entire upper 120 m depth for the second deployment. Also at Jaigarh, where the surface to $\sim$60m data (in 3rd deployment) and Kollam, where 80 m and below (in 4th deployment) is unavailable and hence discarded from standing stock estimation. There are few deployments where no data or bad data was recorded e.g, at Udupi (4th deployment) and Kanyakumari (6th deployment). The seasonal cycle of standing stock for 24 - 120 m available data is explored in \autoref{sec:seasonalcyclebiomass}.
 	
 	\subsection{Mixed-layer depth, temperature and oxygen}
 	As we are using a 153.3 kHz ADCP moored at $\sim$ 150 m, the top $\sim$ 10\% of data is unusable because of surface echoes. MLD in EAS is of the order $\sim$ 20 to 40 m during summer monsoon \citep{shetye1990hydrography,sreenivas2008monthly} especially in the SEAS. Although it is possible to use the near surface ADCP data after due noise correction; it is beyond the scope of present study. The temperature data is used from \citep{chatterjee2012new} which is a monthly climatology having 1 $^o$ spatial resolution. Monthly climatology of oxygen data is obtained from World Ocean Atlas 2013 \citep{garcia2013oxygen} which contains objectively analyzed 1 $^o$ climatological fields of in situ measurements. 
@@ -141,13 +141,15 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	\section{The seasonal cycle}
 	In the following section we will delineate the seasonal variation of zooplankton biomass and standing stock.
 	\subsection{Seasonal cycle of biomass}
-	\label{sec:seasonalcycle}
-	A preliminary analysis of the biomass time series in daily and monthly averaged scale shows that the biomass decreases with increasing depth (\cref{fig:fig3}) at all the seven locations. We've defined depth of 
-	  
-	The rate of biomass decrease with depth, roughly defined as the difference between the mean biomass at 40 m  and 105 m depth, is highest off Jaigarh and Mumbai as it has higher biomass in upper ocean (\cref{fig:fig3} c2,b2). This is followed by CEAS locations Goa and Udupi. While the rate of biomass decrease is lower off Kollam for 2017 to 2020. The rate of decrease is lowest off Kanyakumari. Following is the order of their decrease rate of biomass: Jaigarh (96 $mg\ m^{-3}$), Mumbai (91 $mg\ m^{-3}$), Okha (79 $mg\ m^{-3}$), Udupi (78 $mg\ m^{-3}$), Kollam(73 $mg\ m^{-3}$), Goa (72 $mg\ m^{-3}$) and Kanyakumari (39 $mg\ m^{-3}$).  The mean and standard deviation is shown in \autoref{tab:table3}. The weaker decline in zooplankton biomass with respect to the depth at Okha (\cref{fig:fig3} a1,a2) at NEAS is agreeing with earlier reported data \cite{madhupratap2001mesozooplankton,smith2005mesozooplankton,wishner1998mesozooplankton} where oxygen deficit at is thought to be the cause. The sites at SEAS, especially off Kanyakumari and 2017 to 2020 off Kollam also have weaker decline \citep{madhupratap2001mesozooplankton, aparna2022seasonal}. However, after 2020 the rate of decline in biomass with depth off Kollam is similar to that off Mumbai in stark contrast to its previous years. This is due to a strong bloom in these years also seen at other locations. This high growth led to increase in biomass in the entire water column(\cref{fig:fig3} f1,f2).
-	 
-	Analysis of the z215 \& z200 shows strong seasonality at the CEAS moorings off Goa and Jaigarh respectively, with low variation in biomass in its upper ocean, with shallow (deeper) D215 \& D200 in summer (winter) monsoon. This is followed by the moorings off Mumbai and Udupi which are transition zones of NEAS and SEAS, respectively. The 
-	 
+	\label{sec:seasonalcyclebiomass}
+	Biomass contour to demarcate upper (high biomass) to lower (low biomass) regimes is devised for each zooplankton time series to show their seasonality. A preliminary analysis of the biomass time series in daily and monthly averaged scale shows that the biomass decreases with increasing depth (\cref{fig:fig3}) at all the seven locations. The rate of biomass decrease with depth, roughly defined as the difference between the mean biomass at 40 m  and 104 m depth, is highest off Jaigarh and Mumbai as it has higher biomass in upper ocean (\cref{fig:fig3} c2,b2). This is followed by CEAS locations Goa and Udupi (\cref{fig:fig3} d2,e2). While the rate of biomass decrease is lower off Kollam for 2017 to 2020, it becomes considerably high from thereon (\cref{fig:fig3} f2). The rate of decrease is lowest off Kanyakumari. Following is the order of their decrease rate of biomass: Jaigarh (96 $mg\ m^{-3}$), Mumbai (91 $mg\ m^{-3}$), Okha (79 $mg\ m^{-3}$), Udupi (78 $mg\ m^{-3}$), Kollam(73 $mg\ m^{-3}$), Goa (72 $mg\ m^{-3}$) and Kanyakumari (39 $mg\ m^{-3}$).  The mean and standard deviation is shown in \autoref{tab:table3}. Following poleward along the slope, the mean biomass at 40 m off Kanyakumari is the least $\sim$ 207 $mg\ m^{-3}$ which increases drastically to 272 $mg\ m^{-3}$ off Kollam. It decreases till Goa and then increases to a maximum of 278 $mg\ m^{-3}$ off Jaigarh. Off Mumbai the mean biomass is 272 $mg\ m^{-3}$, and further north off Okha, it declines to 230 $mg\ m^{-3}$. A similar trend is observed in mean biomass at 104 m depth of all locations and their corresponding standard deviation. A pattern that develops from this is observed, with lower mean biomass off Okha (northernmost of EAS) and off Goa (CEAS) bifurcated by higher mean biomass off Mumbai \& Jaigarh; while the lower mean biomass off Udupi (CEAS) and off Kanyakumari (Southernmost of EAS) is divided by higher mean biomass off Kollam. Similarly from standard deviation of biomass it is inferred that the sites with higher biomass tends to have higher variation over time as in the case of Kollam, Jaigarh and Mumbai. 
+	
+	A comparatively weaker decline in zooplankton biomass with respect to depth off Okha (\cref{fig:fig3} a1,a2) at NEAS is agreeing with earlier reported data \cite{madhupratap2001mesozooplankton,smith2005mesozooplankton,wishner1998mesozooplankton} where oxygen deficit at is thought to be the cause, especially during summer monsoon. The sites at SEAS, especially off Kanyakumari and 2017 to 2020 off Kollam also have weaker decrease \citep{madhupratap2001mesozooplankton, aparna2022seasonal}. However, post 2020 the decline in biomass with depth off Kollam is similar to that off Mumbai in stark contrast to its previous years. This is due to a strong bloom in these years. This high growth led to increase in biomass in the entire water column(\cref{fig:fig3} f1,f2) and deepening of D215. 
+
+	Analysis of the demarcating biomass contours (z175, z200, z215 of respective locations) shows strong seasonality at NEAS, CEAS and SEAS (excluding Kanyakumari). Although a shallow and seasonally invariant D215 (D175) is seen for Goa and Kollam  during January 2019 to December 2020. While the z175 (z215,z200) is deeper in winter monsoon throughout EAS, we see that at the NEAS regime, the upper ocean shows considerably high biomass during this period as in the case of Okha, Mumbai and Jaigarh. On the contrary at SEAS regime, the upper ocean shows higher biomass during summer monsoon as seen off Udupi, Kollam and Kanyakumari even though the z200 (z215, z175) is shallower in this period. 
+	
+	\subsection{Seasonal cycle of standing stock}
+	\label{sec:seasonalcyclezss}
 
 
 	\newpage	 
@@ -196,7 +198,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 				& 03/11/2019                      & 30/11/2020                    & 1142                       & 264                       & 32                          , 36                          , 33                          , 32                          & 0.45                        , 0.45                        , 0.45                        , 0.45                        \\
 				& 30/11/2020                      & 05/03/2022                    & 1099                       & 119                       & 33                          , 36                          , 34                          , 32                          & 0.45                        , 0.45                        , 0.45                        , 0.45                        \\
 				\midrule
-				\multirow{5}{*}{\begin{tabular}[c]{@{}c@{}} Goa\\ (72.74, 15.17)\end{tabular}}          & 03/10/2017                      & 25/09/2018                    & 1000                       & 174                      {\underline{this has to be updated to include later samples}} & 35                          , 37                          , 34                          , 35                          & 0.44                        , 0.44                        , 0.40                        , 0.41                        \\
+				\multirow{5}{*}{\begin{tabular}[c]{@{}c@{}} Goa\\ (72.74, 15.17)\end{tabular}}          & 03/10/2017                      & 25/09/2018                    & 1000                       & 174                      & 35                          , 37                          , 34                          , 35                          & 0.44                        , 0.44                        , 0.40                        , 0.41                        \\
 				& 25/09/2018                      & 16/10/2019                    & 969                        & 145                       & 38                          , 36                          , 36                          , 34                          & 0.44                        , 0.44                        , 0.40                        , 0.41                        \\
 				& 16/10/2019                      & 29/11/2020                    & 966                        & 143                       & 44                          , 38                          , 36                          , 43                          & 0.44                        , 0.44                        , 0.40                        , 0.41                        \\
 				& 29/11/2020                      & 03/03/2022                    & 985                        & 157                       & 35                          , 40                          , 35                          , 38                          & 0.44                        , 0.44                        , 0.40                        , 0.41                        \\
@@ -297,13 +299,15 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	}
 \end{table}
 
+\newpage
 \begin{table}[t]
 	
 	{\footnotesize
-		\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width=\textwidth} % Adjust the spacing above and below the caption
+		\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width*=\columnwidth} % Adjust the spacing above and below the caption
 		\caption{\newline The mean, standard deviation at 40 and 104 m of biomass at 7 mooring sites and their difference is tabulated. All units are in $mg \ m^{-3}$.}
 	\begin{adjustwidth}{0in}{0in} 
 	\begin{tabular}{cccccc}
+		\toprule
 		& \multicolumn{2}{c}{40 m} & \multicolumn{2}{c}{104 m} &            \\ \hline
 		& Mean        & std        & Mean         & std        & difference \\ \hline
 		Okha        & 230.42      & 22.84      & 151.68       & 25.58      & 78.74      \\
@@ -312,7 +316,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 		Goa         & 235.22      & 30.34      & 163.02       & 36.54      & 72.2       \\
 		Udupi       & 247.81      & 34.37      & 169.37       & 38.8       & 78.43      \\
 		Kollam      & 272.56      & 54.94      & 198.89       & 50.08      & 73.67      \\
-		Kanyakumari & 207.07      & 30.42      & 167.63       & 20.89      & 39.44  \\ \hline   
+		Kanyakumari & 207.07      & 30.42      & 167.63       & 20.89      & 39.44  \\ \bottomrule  
 	\end{tabular}
 	\end{adjustwidth}
     \label{tab:table3}
