new file:   datasets/7adcp_biomass/bm_top_correct/4goa_correction.jnl 	new file:   datasets/7adcp_biomass/bm_top_correct/6kollam_correction.jnl 	new file:   datasets/7adcp_biomass/bm_top_correct/7kanyakumari_correction.jnl 	new file:   datasets/7adcp_biomass/clim/fer_run.sh 	new file:   datasets/7adcp_biomass/clim/goa_clim.jnl 	new file:   datasets/7adcp_biomass/clim/jaigarh_clim.jnl 	new file:   datasets/7adcp_biomass/clim/kanyakumari_clim.jnl 	new file:   datasets/7adcp_biomass/clim/kol_clim.jnl 	new file:   datasets/7adcp_biomass/clim/mum_clim.jnl 	new file:   datasets/7adcp_biomass/clim/okha_clim.jnl 	new file:   datasets/7adcp_biomass/clim/udupi_clim.jnl 	new file:   datasets/7adcp_biomass/readme 	new file:   datasets/7adcp_biomass/regridded.sh 	new file:   datasets/7adcp_biomass/ss/readme 	new file:   datasets/7adcp_biomass/ss/ss_calc.sh 	new file:   datasets/7adcp_biomass/ss/ss_calc_new.sh 	new file:   datasets/oxygen_temp/readme 	new file:   datasets/stats_main.xlsx 	new file:   figures/40m_biomass_wavelet_2018.jpeg 	modified:   figures/adcp_moorings_new.jpg 	new file:   figures/adcp_moorings_roi.jpg 	new file:   figures/annual_300_400_451.jpeg 	modified:   figures/biomass_40m_104m.png 	new file:   figures/biomass_40m_104m_2018.png 	modified:   figures/biomass_daily_monthly.png 	deleted:    figures/climatology_biomass.png 	modified:   figures/climatology_biomass_ss_chl.png 	new file:   figures/figures_submit.tar.xz 	new file:   figures/figures_submit/fig_01_adcp_moorings_roi.jpg 	new file:   figures/figures_submit/fig_02_biomass_daily_monthly.png 	new file:   figures/figures_submit/fig_03_climatology_biomass_ss_chl.png 	new file:   figures/figures_submit/fig_04_biomass_40m_104m.png 	new file:   figures/figures_submit/fig_05_biomass_40m_104m_2018.png 	new file:   figures/figures_submit/fig_06_intraannual_100_250_351.jpeg 	new file:   figures/figures_submit/fig_07_annual_300_400_451.jpeg 	new file:   figures/figures_submit/fig_08_intraseasonal_30_90_181.jpeg 	

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -889,6 +889,26 @@
 	author={García, H. E. and R. A. Locarnini and T. P. Boyer and J. I. Antonov and A. V. Mishonov and O. K. Baranova and M. M. Zweng and J. R. Reagan and D. R. Johnson},
 	journal={NOAA Atlas NESDIS 75},
 	volume={3},
-	year={2014}
+	year={2014},
 	publisher={NOAA, Washington DC, USA,A. Mishonov, Technical Ed}
+}
+@article{maraun2004cross,
+	title={Cross wavelet analysis: significance testing and pitfalls},
+	author={Maraun, Douglas and Kurths, J{\"u}rgen},
+	journal={Nonlinear Processes in Geophysics},
+	volume={11},
+	number={4},
+	pages={505--514},
+	year={2004},
+	publisher={Copernicus Publications G{\"o}ttingen, Germany}
+}
+@article{khandagale2022seasonal,
+	title={Seasonal and spatial variability of zooplankton diversity in North Eastern Arabian Sea along the Maharashtra coast},
+	author={Khandagale, Punam A and Mhatre, Vaibhav D and Thomas, Sujitha},
+	journal={Journal of the Marine Biological Association of India},
+	volume={64},
+	number={1},
+	pages={25--32},
+	year={2022},
+	publisher={Marine Biological Association of India, Kochi}
 }
